Ivan - Create Ticket Form - Fix layout issues  [skip ci]

--- a/client/src/app/main/dashboard/dashboard-layout.scss
+++ b/client/src/app/main/dashboard/dashboard-layout.scss
@@ -1,9 +1,5 @@
 .dashboard {
     &__menu {
-
-    }
-
-    &__content {
-
+        margin-bottom: 10px;
     }
 }
